--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.1.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.2
+django-modeltranslation==0.18.9
 djangorestframework==3.14.0
 drf-yasg==1.21.5
 idna==3.4
@@ -12,10 +13,12 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==23.0
+Pillow==9.5.0
 pytz==2023.3
 requests==2.28.2
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 sqlparse==0.4.3
+typing-extensions==4.5.0
 uritemplate==4.1.1
 urllib3==1.26.15
