--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,13 @@ charset-normalizer==3.1.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.2
+django-cors-headers==3.14.0
+django-decouple==2.1
+django-environ==0.10.0
 django-modeltranslation==0.18.9
 djangorestframework==3.14.0
 drf-yasg==1.21.5
+gunicorn==20.1.0
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
@@ -14,6 +18,9 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==23.0
 Pillow==9.5.0
+psycopg2==2.9.6
+psycopg2-binary==2.9.6
+python-decouple==3.8
 pytz==2023.3
 requests==2.28.2
 ruamel.yaml==0.17.21
