--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ charset-normalizer==3.1.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.2
+django-ckeditor==6.5.1
 django-cors-headers==3.14.0
 django-decouple==2.1
 django-environ==0.10.0
+django-js-asset==2.0.0
 django-modeltranslation==0.18.9
 djangorestframework==3.14.0
 drf-yasg==1.21.5
@@ -26,6 +28,6 @@ requests==2.28.2
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 sqlparse==0.4.3
-typing-extensions==4.5.0
+typing_extensions==4.5.0
 uritemplate==4.1.1
 urllib3==1.26.15
