--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-decouple==2.1
 django-environ==0.10.0
 django-js-asset==2.0.0
 django-modeltranslation==0.18.9
+django-rosetta==0.9.8
 djangorestframework==3.14.0
 drf-yasg==1.21.5
 gunicorn==20.1.0
@@ -20,6 +21,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==23.0
 Pillow==9.5.0
+polib==1.2.0
 psycopg2==2.9.6
 psycopg2-binary==2.9.6
 python-decouple==3.8
