--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,19 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+digit==1.1.1
 Django==4.2
 django-ckeditor==6.5.1
 django-cors-headers==3.14.0
 django-decouple==2.1
 django-environ==0.10.0
+django-jazzmin==2.6.0
 django-js-asset==2.0.0
 django-modeltranslation==0.18.9
 django-rosetta==0.9.8
 djangorestframework==3.14.0
 drf-yasg==1.21.5
+freetype-py==2.3.0
 gunicorn==20.1.0
 idna==3.4
 inflection==0.5.1
@@ -24,12 +27,17 @@ Pillow==9.5.0
 polib==1.2.0
 psycopg2==2.9.6
 psycopg2-binary==2.9.6
+pycairo==1.23.0
+python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3
+reportlab==4.0.0
 requests==2.28.2
+rlPyCairo==0.2.0
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+six==1.16.0
 sqlparse==0.4.3
-typing_extensions==4.5.0
+typing-extensions==4.5.0
 uritemplate==4.1.1
 urllib3==1.26.15
